--- a/ASSETS/CSS/style.css
+++ b/ASSETS/CSS/style.css
@@ -50,40 +50,15 @@ farbe: #333, #fff, #3dc8d5, #8507e1, #ccc
    margin:0 auto;
    margin-top: 10em;
  }
+ header div:hover{
+  background-image: linear-gradient(to top right, #3dc8d5,#8507e1);
+ }
  header div h2{
   font-size: 3.5em;
   color:#fff;
   margin-bottom: 0.5em;
  }
-/* Header Gradient transition */ /*  Absolut geiler Scheiß! IT WORKS! */
- .gradient {
-  position: relative;
-  z-index: 1; /* matters!*/
-  background: linear-gradient(
-    to top right,
-    #8507e1,
-    #3dc8d5
-  );
-}
-.gradient::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 20em;
-  height: 18em;
-  background: linear-gradient(
-    to top right,
-    #3dc8d5,
-    #8507e1
-  );
-  opacity: 0;
-  transition: opacity 0.4s;
-  z-index: -1;
-}
-.gradient:hover::before {
-  opacity: 1;
-} 
+
 
 /* Header Nav-Liste */
 header ul {
